# intrusion_detection

./: .gitignore  Untitled1.ipynb  pyproject.toml
docker/: dockerfile
intrusion_detection/: __main__.py  constants.py  create_fake_data.py
intrusion_detection/data_parsing/: load_data.py  process_data.py
intrusion_detection/model_evaluation/: perplexity_computation.py  verwirrungsgrad_computation.py
tests/: test_intrusion_detection.py
~/Documents/Bachelor/runs/run-03/: label_encoder.pickle  x_test.npy  x_train.npy  y_test.npy  y_train.npy
