[tool.poetry]
name = "intrusion-detection"
version = "0.1.0"
description = ""
authors = ["DennisFitzner <dennisfitzner@protonmail.com>"]

[tool.poetry.dependencies]
python = "~3.9.12"
pandas = "^1.4.3"
typer = "^0.4.1"
scikit-learn = "^1.1.1"
numpy = "^1.23.0"
keras = "^2.9.0"
tensorflow = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
isort = "^5.10.1"
pylint = "^2.14.4"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"